Bug 1331297 - Update libevent to version 2.0.22-stable. r=jld

--HG--
extra : rebase_source : 73804cbcb2930f32ea2125bd382e0ec2169fd95a